# ort

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _tests_full.rs  agent_ideas.txt  agent_system_prompt.txt  agent_todo.txt  build.sh  build_release.sh  ideas.txt  libc_removal_plan.md  perf_ideas.txt  rust-toolchain.toml  size_data.txt  todo.txt
.cargo/: config.toml
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: buf_read.rs  common.rs  input.rs  lib.rs  main.rs  net.rs  output.rs
cli/src/common/: config.rs  data.rs  error.rs  utils.rs
cli/src/input/: args.rs  cli.rs  list.rs  prompt.rs  to_json.rs
cli/src/net/: chunked.rs  http.rs  socket.rs  tls.rs
cli/src/net/tls/: aead.rs
cli/src/output/: from_json.rs  writer.rs
cli/tests/: full.rs
core/: Cargo.toml
core/src/: common.rs  input.rs  lib.rs  libc.rs  main.rs  net.rs  output.rs
core/src/common/: alloc.rs  buf_read.rs  cancel_token.rs  config.rs  data.rs  dir.rs  error.rs  file.rs  io.rs  queue.rs  resolver.rs  stats.rs  thread.rs  time.rs  utils.rs
core/src/input/: args.rs  cli.rs  list.rs  prompt.rs  to_json.rs
core/src/net/: chunked.rs  http.rs  socket.rs  tls.rs
core/src/net/tls/: aead.rs  hkdf.rs  sha2.rs
core/src/output/: from_json.rs  writer.rs
core/tests/: full.rs
misc/: codex.profile
src/: _tls_glm.rs  _tls_grok.rs  _tls_manual.rs  action_history.rs  action_list.rs  action_prompt.rs  builtins.rs  builtins.s  cancel_token.rs  cli.rs  common.rs  config.rs  data.rs  digest.rs  error.rs  hkdf.rs  input.rs  lib.rs  libc.rs  main.rs  multi_channel.rs  net.rs  output.rs  panic_handler.rs  parser.rs  resolver.rs  serializer.rs  start.s  syscall.rs  tls.rs  utils.rs  writer.rs  x25519.rs
src/common/: alloc.rs  base64.rs  buf_read.rs  cancel_token.rs  config.rs  data.rs  dir.rs  error.rs  file.rs  io.rs  json_parser.rs  queue.rs  resolver.rs  site.rs  stats.rs  thread.rs  time.rs  tools.rs  utils.rs
src/input/: action_list.rs  agent.rs  args.rs  cli.rs  list.rs  prompt.rs  to_json.rs
src/net/: chunked.rs  http.rs  socket.rs  tls.rs
src/net/tls/: aead.rs  hmac.rs  sha2.rs
src/output/: agent.rs  from_json.rs  last_writer.rs  logger.rs  writer.rs
src/tls/: ecdh.rs  hkdf.rs  hmac.rs  sha2.rs
tests/: full.rs
