cargo-features = ["panic-immediate-abort", "profile-rustflags"]

[package]
name = "ort-openrouter-cli"
version = "0.3.3"
edition = "2024"
description = "Open Router CLI"
authors = ["Graham King <graham@gkgk.org>"]
license = "MIT"
repository = "https://github.com/grahamking/ort"
readme = "README.md"

[features]
# Will print to stderr "+530\n" and "-530\n" when memory is allocated and freed
print-allocations = []

[[bin]]
name = "ort"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
codegen-units = 1
panic = "immediate-abort"
lto = true
rustflags = ["-Ctarget-cpu=native", "-Crelocation-model=static", "-Clink-args=-Wl,--build-id=none,--no-eh-frame-hdr", "-Cforce-frame-pointers=yes"]
