cargo-features = ["profile-rustflags"]
#cargo-features = ["panic-immediate-abort", "profile-rustflags"]

[package]
name = "ort-openrouter-cli"
version = "0.4.6"
edition = "2024"
description = "Open Router CLI"
authors = ["Graham King <graham@gkgk.org>"]
license = "MIT"
repository = "https://github.com/grahamking/ort"
readme = "README.md"

[features]
# Will print to stderr "+530\n" and "-530\n" when memory is allocated and freed
# --release mode only because in debug mode we use Rust's allocator
print-allocations = []

# Panic the first time we call realloc, which tries to resize a block of memory.
# Ideally all memory is correctly sized on first alloc.
panic-on-realloc = []

[[bin]]
name = "ort"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
codegen-units = 1
# immediate-abort saves binary size which is very nice, but:
# 1. makes building / installing more difficult, needs rust-src
# 2. make debugging harder, no panic info at all
# 3. does not work without libc AFAICT
#panic = "immediate-abort"
panic = "abort"
lto = true
rustflags = ["-Ctarget-cpu=native", "-Clink-args=-nostartfiles", "-Crelocation-model=static", "-Clink-args=-Wl,--no-dynamic-linker,--build-id=none,--no-eh-frame-hdr", "-Cforce-frame-pointers=yes"]
