[package]
name = "ort-openrouter-cli"
version = "0.4.6"
edition = "2024"
description = "Open Router CLI"
authors = ["Graham King <graham@gkgk.org>"]
license = "MIT"
repository = "https://github.com/grahamking/ort"
readme = "README.md"

[features]
# Will print to stderr "+530\n" and "-530\n" when memory is allocated and freed
# --release mode only because in debug mode we use Rust's allocator
print-allocations = []

# Panic the first time we call realloc, which tries to resize a block of memory.
# Ideally all memory is correctly sized on first alloc.
panic-on-realloc = []

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"

[[bin]]
name = "ort"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"
lto = true
