[package]
name = "ort-openrouter-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "ort"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[dependencies]
ort-openrouter-core = { path = "../core" }
