[package]
name = "ort-openrouter-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "ort"
path = "src/main.rs"

[features]
# Will print to stderr "+530\n" and "-530\n" when memory is allocated and freed
print-allocations = ["ort-openrouter-core/print-allocations"]

[dependencies]
ort-openrouter-core = { path = "../core" }
