[package]
name = "ort-openrouter-core"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
# Will print to stderr "+530\n" and "-530\n" when memory is allocated and freed
print-allocations = []
